<resources>
    <string name="app_name">My Application</string>
    <string name="default_floatingview_channel_id">default_floatingview_channel</string>
    <string name="default_floatingview_channel_name">Default Channel</string>


    //dialog
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_video_title">Are you sure to delete video from your device local storage?</string>
    <string name="dialog_edit_name">Edit new title of the video:</string>
    <string name="text_title_image_info">Image information</string>
    <string name="text_location_image_info">Location:</string>
    <string name="text_resolution_image_info">Resolution:</string>
    <string name="text_size_image_info">Size:</string>
    <string name="text_title_overlay">Display over other apps</string>
    <string name="text_title_remind">Allow this app to display on top of other apps to display floating control. ☺</string>

    //setting
    <string name="text_video_setting">Video Settings</string>
    <string name="text_video_resolution">Video Resolution</string>
    <string name="text_video_quality">Video Quality</string>
    <string name="text_video_quality_note">Higher quality means larger video file size</string>
    <string name="text_video_fps">FPS</string>
    <string name="text_video_fps_note">Higher frame rate make video smoother but use more CPU</string>
    <string name="text_video_audio">Record Audio</string>
    <string name="text_video_audio_note">Internal audio record is not allowed by Android now</string>
    <string name="text_video_location">Video Location</string>
    <string name="text_show_control">Show Control</string>
    <string name="text_show_control_note">Show the record window when record</string>

    //edit
    <string name="text_video_editor">Video Editor</string>
    <string name="text_image_editor">Image Editor</string>

    //video
    <string name="text_remind_access_permission">Storage access permission is needed to use this feature. Please grant us Storage access permission and try again.☺</string>
    <string name="text_turn_it_on">Turn it on >></string>
    <string name="chathead_click_message">Click</string>

    //Setting
    <string name="cancel">Cancel</string>
    <string name="select_resolution">Select video resolution</string>
    <string name="show_control">Show the record window when record</string>
    <string name="select_bitrate">Select bitrate</string>
    <string name="select_fps">Select frame rate</string>
    <string name="select_location">Select the storage location</string>

</resources>
