<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_video_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_video_setting"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_video_setting">

            <ImageView
                android:id="@+id/image_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_video_resolution"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_resolution"
                app:layout_constraintTop_toTopOf="@id/image_resolution" />

            <TextView
                android:id="@+id/text_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_video_resolution"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_resolution"
                app:layout_constraintTop_toBottomOf="@id/image_resolution" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_resolution"
                app:layout_constraintTop_toBottomOf="@id/text_resolution" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_resolution">

            <ImageView
                android:id="@+id/image_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_high_quality_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_video_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_video_quality"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_size"
                app:layout_constraintTop_toTopOf="@id/image_size" />

            <TextView
                android:id="@+id/text_quality_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/text_video_quality_note"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_quality"
                app:layout_constraintTop_toBottomOf="@id/image_size" />

            <TextView
                android:id="@+id/text_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_video_quality"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_size"
                app:layout_constraintTop_toBottomOf="@id/text_quality_note" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_quality"
                app:layout_constraintTop_toBottomOf="@id/text_quality" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_fps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_quality">

            <ImageView
                android:id="@+id/image_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_video_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_video_fps"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_fps"
                app:layout_constraintTop_toTopOf="@id/image_fps" />

            <TextView
                android:id="@+id/text_fps_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/text_video_fps_note"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_video_fps"
                app:layout_constraintTop_toBottomOf="@id/text_video_fps" />

            <TextView
                android:id="@+id/text_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_video_fps"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_fps"
                app:layout_constraintTop_toBottomOf="@id/text_fps_note" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_fps"
                app:layout_constraintTop_toBottomOf="@id/text_fps" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_fps">

            <ImageView
                android:id="@+id/image_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_audio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_video_audio"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_audio"
                app:layout_constraintTop_toTopOf="@id/image_audio" />

            <TextView
                android:id="@+id/text_audio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_video_audio_note"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/switch_audio"
                app:layout_constraintStart_toEndOf="@id/image_audio"
                app:layout_constraintTop_toBottomOf="@id/image_audio" />

            <Switch
                android:id="@+id/switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_transparent_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_audio"
                app:layout_constraintTop_toBottomOf="@id/text_audio" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_audio">

            <ImageView
                android:id="@+id/image_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_moon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_show_control"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_control"
                app:layout_constraintTop_toTopOf="@id/image_control" />

            <TextView
                android:id="@+id/text_control"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_show_control_note"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/switch_control"
                app:layout_constraintStart_toEndOf="@id/image_control"
                app:layout_constraintTop_toBottomOf="@id/image_control" />

            <Switch
                android:id="@+id/switch_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_transparent_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_control"
                app:layout_constraintTop_toBottomOf="@id/text_control" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_control">

            <ImageView
                android:id="@+id/image_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_folder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_video_location"
                android:textColor="@color/color_transparent_black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/image_location"
                app:layout_constraintTop_toTopOf="@id/image_location" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_video_resolution"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_location"
                app:layout_constraintTop_toBottomOf="@id/image_location" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/color_light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/text_location" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
